# coc-generator

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: publish_doc.yaml  python-package.yml
docs/: conf.py  index.rst  reference.rst
src/coc_gen/: __init__.py  base_classes.py  cli.py  dice.py  investigator.py
src/coc_gen/coc_eng/: __init__.py  occupations.py  skills.py
src/coc_gen/coc_swe/: __init__.py  occupations.py  skills.py
src/coc_gen/data/: occupations.py  skills.py
src/coc_gen/utils/: __init__.py  dice.py
tests/: test_dice.py  test_invetigators.py  test_occupations.py  test_skills.py
