[tool.poetry]
name = "coc-gen"
version = "0.2.0"
description = ""
authors = ["jens persson <jens@persson.cx>"]
readme = "README.md"
packages = [{ include = "coc_gen", from = "src" }]


[tool.poetry.dependencies]
python = "^3.10"
faker = "^26.1.0"
click = "^8.1.7"


[tool.poetry.group.dev.dependencies]
pre-commit = ">=3.8.0"
pep8 = ">=1.7.1"
pytest = ">=8.3.2"
pylint = ">=3.2.6"
sphinx = ">=7.4.7"
sphinx-click = ">=6.0.0"
sphinx-autodoc-typehints = ">=2.2.3"
ruff = ">=0.5.7"

[tool.poetry.scripts]
investigator = 'coc_gen.cli:investigator'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "S311",  # This is not crypto code
    "FIX",   # To do annotations are allowed
    "TD002", # To do annotations are allowed
    "TD003", # To do annotations are allowed
    "COM",   # Not recomended with auto formating
    "D206",  # Not recomended with auto formating
    "D300",  # Not recomended with auto formating
    "E111",  # Not recomended with auto formating
    "E114",  # Not recomended with auto formating
    "E117",  # Not recomended with auto formating
    "ISC",   # Not recomended with auto formating
    "Q",     # Not recomended with auto formating
    "W191",  # Not recomended with auto formating
]
allowed-confusables = ["×"]
[tool.ruff.lint.pydocstyle]
convention = "google"
